# S.O.S

./: Avisos_Preceptor.c  Avisos_Residente.c  CMakeLists.txt  README.md  avaliacao_preceptor.c  avaliacao_preceptor.h  avaliacao_residente.c  avaliacao_residente.h  avisos.h  avisos.txt  avisos_preceptores.c  avisos_preceptores.h  avisos_residentes.c  avisos_residentes.h  clinica.txt  configuracoes.c  diagnostica.txt  escolha_ficha_avaliativa.c  escolha_ficha_avaliativa.h  frequencia_Maria_Clara_Castro.txt  login.c  login.h  main.c  pratica.txt  presenca.c  presenca.h  presensa.c  residente_avaliacao.h
Avisos/: avisos_preceptor.c  avisos_residente.c
Avisos/output/: avisos.txt
Configurações/: configuracoes.c
Configurações/output/: mensagem.txt
Home/: home.c
Login/: Preceptores.txt  Residentes.txt  inicial.c
Presensa/: presensa.c
Presensa/output/: frequencia_Maria_Clara_Castro.txt
avaliação/: avaliacao_preceptor.c  avaliacao_residente.c  avaliação.c
avaliação/output/: avaliaÃ§Ã£o.txt
output/: avisos.txt  faq.txt  mensagem.txt
